# rom-properties

./: .clang-tidy  .gitattributes  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  NETWORK.md  NEWS.md  README.md  SECURITY.md  appveyor-artifacts.cmd  appveyor-dpkg.sh  appveyor.bat  appveyor.cmd  appveyor.sh  appveyor.yml  codecov.yml  crowdin.yml  git_version.sh  lgtm.dummy.js  lgtm.yml  travis.sh  version.txt
doc/: CMakeLists.txt  COMPILING.md  keys.conf.example  md-plte-adjust.c  nes-plte-adjust.c  rom-properties.conf.example
doc/abi/: dump-exports.sh  romdata-1.exports.amd64.GentooLinux.gcc12.glibc-2.35.txt  romdata-1.exports.amd64.GentooLinux.gcc12.glibc-2.36.txt  romdata-1.exports.amd64.Ubuntu1604.gcc5.glibc-2.23.txt  romdata-1.exports.amd64.Windows.gcc12.txt  romdata-1.exports.amd64.Windows.msvc16.txt  romdata-1.exports.amd64.Windows.msvc17.txt  romdata-1.exports.i386.Ubuntu1604.gcc5.glibc-2.23.txt  romdata-1.exports.i386.Windows.gcc12.txt  romdata-1.exports.i386.Windows.msvc16.txt  romdata-1.exports.i386.Windows.msvc17.txt  romdata-2.exports.amd64.GentooLinux.gcc12.glibc-2.36.txt  romdata-2.exports.amd64.Ubuntu1604.gcc5.glibc-2.23.txt  romdata-2.exports.amd64.Windows.gcc12.txt  romdata-2.exports.amd64.Windows.msvc16.txt  romdata-2.exports.i386.Ubuntu1604.gcc5.glibc-2.23.txt  romdata-2.exports.i386.Windows.gcc12.txt  romdata-2.exports.i386.Windows.msvc16.txt
doc/formats/: Original URLs.txt  s98spec2.txt  s98spec3.txt
extlib/: .clang-tidy  CMakeLists.txt
extlib/Detours/: CMakeLists.txt  _MODIFIED_DETOURS.txt
extlib/PowerVR/: CMakeLists.txt  PVRTDecompress.cpp  PVRTDecompress.h  _MODIFIED_POWERVR_NATIVE_SDK.txt
extlib/basisu_astc/: CMakeLists.txt  _MODIFIED_BASISU.txt  _MODIFIED_ZLIB.txt  basisu_astc_decomp.cpp  basisu_astc_decomp.h
extlib/fmt/: CMakeLists.txt  _MODIFIED_FMTLIB.txt  _MODIFIED_LIBFMT.txt
extlib/gettext/: AUTHORS  CMakeLists.txt  ChangeLog  DEPENDENCIES  HACKING  INSTALL  INSTALL.windows  Makefile.am  Makefile.in  NEWS  PACKAGING  _MODIFIED_GETTEXT.txt  aclocal.m4  autogen.sh  check-copyright-headers  configure  configure.ac
extlib/googletest/: CMakeLists.txt  _MODIFIED_GTEST.txt
extlib/inih/: CMakeLists.txt  _MODIFIED_INIH.txt  ini.c  ini.h
extlib/libfmt/: CMakeLists.txt  _MODIFIED_LIBFMT.txt
extlib/libjpeg-turbo/: CMakeLists.txt  _MODIFIED_LIBJPEG-TURBO.txt  cdjpeg.h  jcapimin.c  jcdctmgr.c  jcphuff.c  jcsample.c  jcstest.c  jdapistd.c  jdmerge.c  jdsample.h  jmemsys.h  jmorecfg.h  jpegint.h  jpeglib.h  rdtarga.c  tjbench.c  tjunittest.c  turbojpeg.c  turbojpeg.h
extlib/libmspack-xenia/: CMakeLists.txt  _MODIFIED_LIBMSPACK.txt  config.h.in  lzxd.c  readhuff.h  system.c  xenia_lzx.c  xenia_lzx.h
extlib/libpng/: .gitattributes  CMakeLists.txt  _MODIFIED_LIBPNG.txt  png.h  pngget.c  pnginfo.h  pngpread.c  pngpriv.h  pngread.c  pngrtran.c  pngrutil.c  pngset.c  pngstruct.h  pngtest.c  pngwrite.c  pngwutil.c
extlib/lz4/: _MODIFIED_LZ4.txt
extlib/microtar/: CMakeLists.txt
extlib/minilzo/: CMakeLists.txt  _MODIFIED_LZO.txt  minilzo-dll.rc
extlib/minizip/: .gitignore  BUGS.txt  CMakeLists.txt  ChangeLog  README.md  _MODIFIED_MINIZIP.txt  crypt.h  ioapi.c  ioapi.h  iowin32.c  iowin32.h  minigzip.c  minizip.c  mz.h  mz_compat.h  mz_of.h  mz_os_win32.c  mz_strm_zstd.c  unzip.c  unzip.h  zip.c  zip.h
extlib/minizip-ng/: CMakeLists.txt  INDEX.md  README.md  _MODIFIED_MINIZIP.txt  minizip-ng.def  minizip.c  mz.h  mz_config.h.cmakein  mz_crypt_openssl.c  mz_os.c  mz_os.h  mz_os_posix.c  mz_os_win32.c  mz_strm_os_posix.c  mz_strm_split.c  mz_zip.c  mz_zip_rw.c
extlib/oldwincompat/: CMakeLists.txt  README.txt  win2kstubs.asm  win9xstubs.c
extlib/pugixml/: CMakeLists.txt  _MODIFIED_PUGIXML.txt
extlib/rapidjson/: CMakeLists.txt  _MODIFIED_RAPIDJSON.txt
extlib/tinyxml2/: CMakeLists.txt  _MODIFIED_TINYXML2.txt  dox  tinyxml2.cpp  tinyxml2.h  tinyxml2.rc  xmltest.cpp
extlib/unice68/: AUTHORS  CMakeLists.txt  README  _MODIFIED_UNICE68.txt  cm_config.h.in  unice68.c  unice68.h  unice68.pc.in  unice68_pack.c  unice68_private.h  unice68_unpack.c  unice68_version.c
extlib/uniwidth/: CMakeLists.txt  _MODIFIED_GNULIB.txt  bitmap.h  cjk.h  streq-opt.h  streq.h  uniwidth.h  width.c
extlib/zlib/: CMakeLists.txt  _MODIFIED_ZLIB.txt  adler32.c  crc32.c  deflate.c  deflate.h  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.h  inflate.c  inftrees.h  trees.c  zconf.h.cmakein  zconf.h.in  zlib.h  zutil.c  zutil.h
extlib/zlib-ng/: CMakeLists.txt  Makefile.in  _MODIFIED_ZLIB.txt  configure  deflate.c  functable.c  zbuild.h  zlib-ng.h.in  zutil.c
extlib/zstd/: CMakeLists.txt  _MODIFIED_ZSTD.txt  zstd.h
locale/: .gitignore  CMakeLists.txt  ar.po  cy.po  de.po  en.po  en_GB.po  es.po  exclusions.po  fr.po  gen-pot.sh  it.po  ja.po  pt.po  ro.po  rom-properties.pot  ru.po  uk.po
src/: .clang-format  .clang-tidy  CMakeLists.txt  HMODULE_deleter.hpp  RefBase.hpp  aligned_malloc.h  alignment_macros.h  arm_neon_aligned.h  c++11-compat.clang.h  c++11-compat.gcc.h  c++11-compat.h  c++11-compat.msvc.h  c99-compat.msvcrt.h  clang-format.sh  common.h  compiler-attrs.h  compiler-compat.h  config.libc.h.in  config.version.h.in  ctypex.h  d_type.h  dll-macros.h  dlopen-notes.h  force_inline.h  git.h  pthread_once_win32.h  resource.common.inc.h  rp-libfmt.h  rp-variant.hpp  seccomp-debug.h  span.hh  stdboolx.h.in  tcharx.h  time_r.h  uvector.h
src/amiibo-data/: CMakeLists.txt  amiibo-bin.md  amiibo-bin.txt  amiibo-data.txt  amiibo_bin_structs.h  amiiboc.cpp  stdafx.h
src/dbus/: org.freedesktop.NetworkManager.xml  org.freedesktop.Notifications.xml  org.freedesktop.thumbnails.SpecializedThumbnailer1.xml
src/delayload/: DelayLoadHelper.cmake  DelayLoadHelper.cpp  DelayLoadHelper.hpp
src/gtk/: AchGDBus.cpp  AchGDBus.hpp  AchSpriteSheet.cpp  AchSpriteSheet.hpp  AchSpritesheet.cpp  AchSpritesheet.hpp  CMakeLists.txt  CairoImageConv.cpp  (+78 more)
xdg/: CMakeLists.txt  com.gerbilsoft.rom-properties.metainfo.xml  mime.convert-to-png.types  mime.no-thumbnail.types  mime.thumbnail.types  rom-properties.xml  rp-config.desktop  rp-config.desktop.in
(+2770 files in other folders)
